Compiler Bouw/compiler/test/basic/stephen/fail/empty.cvc
// Should produce an error because a program needs at least one declaration.
